--- a/Olympics-analysis.ipynb
+++ b/Olympics-analysis.ipynb
@@ -7105,6 +7105,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country_year_sport_summary.to_csv('country_year_sport_summary.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
    "outputs": [
