add Feature enginering

--- a/Olympics-analysis.ipynb
+++ b/Olympics-analysis.ipynb
@@ -6602,6 +6602,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 有关主办国效应的特征建立"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "添加特征：是否是主办国信息"
    ]
   },
@@ -7104,13 +7111,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 有关历史表现的特征建立"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "country_year_sport_summary.to_csv('country_year_sport_summary.csv', index=False)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -7161,11 +7173,166 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 模型训练"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 数据分割"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#数据分割\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# 定义输入特征和目标变量\n",
+    "X = athletes_data[['team_events_count', 'athlete_count', 'female_count', 'male_count', \n",
+    "                   'total_male_participants', 'total_female_participants', 'total_participants']]\n",
+    "y = (athletes_data['Total_medal'] > 0).astype(int)  # 将奖牌数量转换为二分类变量（1=获奖，0=未获奖）\n",
+    "\n",
+    "# 分割数据集（80% 训练，20% 测试）\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 为每个Sport创建模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "# 获取所有的运动类型\n",
+    "sports = athletes_data['Sport'].unique()\n",
+    "\n",
+    "# 创建一个字典存储每个 Sport 的模型\n",
+    "sport_models = {}\n",
+    "\n",
+    "# 遍历每个 Sport\n",
+    "for sport in sports:\n",
+    "    # 筛选出当前 Sport 的数据\n",
+    "    sport_data = athletes_data[athletes_data['Sport'] == sport]\n",
+    "    \n",
+    "    # 定义输入特征和目标变量\n",
+    "    X = sport_data[['team_events_count', 'athlete_count', 'female_count', 'male_count', \n",
+    "                    'total_male_participants', 'total_female_participants', 'total_participants']]\n",
+    "    y = (sport_data['Total_medal'] > 0).astype(int)  # 转换为二分类变量（1=获奖，0=未获奖）\n",
+    "    \n",
+    "    # 分割训练集和测试集\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "    \n",
+    "    # 创建并训练模型\n",
+    "    model = RandomForestClassifier(random_state=42)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    \n",
+    "    # 保存模型\n",
+    "    sport_models[sport] = model\n",
+    "    \n",
+    "    # 评估模型\n",
+    "    print(f\"Classification Report for Sport: {sport}\")\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 评价模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "# 交叉验证（以 Swimming 为例）\n",
+    "sport = \"Swimming\"\n",
+    "sport_data = athletes_data[athletes_data['Sport'] == sport]\n",
+    "X = sport_data[['team_events_count', 'athlete_count', 'female_count', 'male_count', \n",
+    "                'total_male_participants', 'total_female_participants', 'total_participants']]\n",
+    "y = (sport_data['Total_medal'] > 0).astype(int)\n",
+    "\n",
+    "# 交叉验证\n",
+    "model = RandomForestClassifier(random_state=42)\n",
+    "scores = cross_val_score(model, X, y, cv=5, scoring='accuracy')\n",
+    "print(f\"Cross-validation accuracy for {sport}: {scores.mean():.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 保存模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# 保存模型\n",
+    "for sport, model in sport_models.items():\n",
+    "    joblib.dump(model, f\"{sport}_medal_predictor.pkl\")\n",
+    "\n",
+    "# 加载模型\n",
+    "loaded_model = joblib.load(\"Swimming_medal_predictor.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 进行预测"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 假设我们想预测某些国家在 Swimming 中的奖牌情况\n",
+    "new_data = pd.DataFrame({\n",
+    "    'team_events_count': [2],\n",
+    "    'athlete_count': [7],\n",
+    "    'female_count': [4],\n",
+    "    'male_count': [3],\n",
+    "    'total_male_participants': [830],\n",
+    "    'total_female_participants': [755],\n",
+    "    'total_participants': [1585]\n",
+    "})\n",
+    "\n",
+    "# 预测\n",
+    "swimming_model = sport_models['Swimming']\n",
+    "prediction = swimming_model.predict(new_data)\n",
+    "print(\"Predicted Medal Outcome:\", prediction)  # 输出 0 或 1（未获奖/获奖）"
+   ]
   }
  ],
  "metadata": {
