--- a/Olympics-analysis.ipynb
+++ b/Olympics-analysis.ipynb
@@ -13801,6 +13801,232 @@
     "comparison['Total_Change'] = comparison['Predicted_Total'] - comparison['Total_medal']\n",
     "print(comparison)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 保存结果"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 创建一个更完整的预测结果DataFrame\n",
+    "prediction_results = final_predictions_sorted.copy()\n",
+    "\n",
+    "# 重命名2024年的列\n",
+    "prediction_results = prediction_results.rename(columns={\n",
+    "    'Gold': '2024_Gold',\n",
+    "    'Total_medal': '2024_Total_medal'\n",
+    "})\n",
+    "\n",
+    "# 添加排名列\n",
+    "prediction_results['Rank'] = range(1, len(prediction_results) + 1)\n",
+    "\n",
+    "# 重新组织列的顺序\n",
+    "columns_order = [\n",
+    "    'Rank',\n",
+    "    'Country',\n",
+    "    'Predicted_Gold',\n",
+    "    'Predicted_Total',\n",
+    "    '2024_Gold',  # 2024年的金牌数\n",
+    "    '2024_Total_medal',  # 2024年的总奖牌数\n",
+    "]\n",
+    "\n",
+    "# 保存完整的预测结果\n",
+    "prediction_results[columns_order].to_csv(\n",
+    "    'predictions_2028_full.csv', \n",
+    "    index=False\n",
+    ")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 查看之前没有拿过奖牌的国家"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 找出历史上从未获得过奖牌的国家\n",
+    "never_medal_countries = history_year_summary.groupby('Country').agg({\n",
+    "    'Total_medal': 'sum',\n",
+    "    'Gold': 'sum'\n",
+    "}).reset_index()\n",
+    "\n",
+    "# 从未获得过任何奖牌的国家\n",
+    "no_medal_countries = never_medal_countries[never_medal_countries['Total_medal'] == 0]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Total_medal</th>\n",
+       "      <th>Gold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Antigua</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>Timor-Leste</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>Tuvalu</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202</th>\n",
+       "      <td>Vanuatu</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>205</th>\n",
+       "      <td>Virgin Islands, British</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>207</th>\n",
+       "      <td>Yemen</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>70 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Country  Total_medal  Gold\n",
+       "4             American Samoa            0     0\n",
+       "5                    Andorra            0     0\n",
+       "6                     Angola            0     0\n",
+       "7                    Antigua            0     0\n",
+       "10                     Aruba            0     0\n",
+       "..                       ...          ...   ...\n",
+       "187              Timor-Leste            0     0\n",
+       "194                   Tuvalu            0     0\n",
+       "202                  Vanuatu            0     0\n",
+       "205  Virgin Islands, British            0     0\n",
+       "207                    Yemen            0     0\n",
+       "\n",
+       "[70 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "no_medal_countries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 从未获得过奖牌的国家的预测情况\n",
+    "no_medal_predictions = prediction_results[\n",
+    "    prediction_results['Country'].isin(no_medal_countries['Country'])\n",
+    "][['Rank', 'Country', 'Predicted_Gold', 'Predicted_Total', '2024_Gold', '2024_Total_medal']].copy()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_medal_predictions.to_csv('no_medal_predictions.csv',index = False)"
+   ]
   }
  ],
  "metadata": {
